<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="title">School of Sardines</string>
  <string name="app_name">School of Sardines</string>
  <string name="service_name">School of Sardines</string>
  <string name="description">3D live wallpaper of sardines that used BOIDS algorithm</string>
  <string name="author">QSDN,Inc.</string>
  <string name="version">version 1.0.13</string>
  <string name="copyright">Copyright (c) 2011 QSDN,Inc. All rights reserved.</string>

  <string name="setting_title">Settings</string>
  <string name="key_preference_iwashi_count">iwashi_count</string>
  <string name="title_preference_iwashi_count">Number of sardines</string>
  <string name="summary_preference_iwashi_count">The number of sardines that display it is specified. </string>
  <string name="dialog_title_iwashi_count" >How many sardines?</string>
  <string name="dialog_message_iwashi_count" >Please select the number of sardines that display it. </string>
  <string name="dialog_iwashi_count_label">Number of sardines:</string>

  <string name="key_preference_iwashi_speed">iwashi_speed</string>
  <string name="title_preference_iwashi_speed">Speed of sardines</string>
  <string name="summary_preference_iwashi_speed">The passing speed that is basic of the sardine is specified. </string>
  <string name="dialog_title_iwashi_speed" >Speed of sardines</string>
  <string name="dialog_message_iwashi_speed" >Please select the passing speed where the sardine swims. </string>
  <string name="dialog_iwashi_speed_label">Speed of sardines:</string>

  <string name="title_preference_iwashi">Settings of sardines</string>
  <string name="summary_setting">Please choose this so that you change the number of sardine or speed.</string>

  <string name="key_preference_iwashi_boids">iwashi_boids</string>
  <string name="title_preference_iwashi_boids">"School of sardines" function</string>
  <string name="summary_on_preference_iwashi_boids">Disable to "school of sardines" function.</string>
  <string name="summary_off_preference_iwashi_boids">Enable to "school of sardines" function.</string>

  <string name="key_about_us">about_us</string>
  <string name="text_about_us">about</string>
  <string name="key_preference_ok_button">ok_button</string>
  <string name="text_preference_ok_button">OK</string>

  <string name="about_title">about School of sardines</string>
  <string name="text_about_ok_button">OK</string>

  <string name="about_description">Explanation:\n
This is 3D live Wallpaper simulating a school of sardines which used BOIDS algorithm.\n
\n
Features:\n
1) This simulates "a school of sardines".
2) You can increase the number of sardine to 200 of them.\n
\tHowever, this becomes very slow and choppy when you increased them.\n
\tPlease adjust number of sardines by yourself.\n
3) You can change the speed that the sardine swims.\n
4) Sardine comes there when you touched screen.\n
5) You can enable "a school of sardine" function.\n
You can disable "a school of sardine" function.\n
6) You can change distance from a viewpoint to the center of the aquarium.\n
7) There is a viewpoint mode of the sardine. You seem to have become the sardine.\n
\n
Requirement:\n
1) After Android2.1.\n
2) OpenGL ES 1.0.\n
3) Over 3MB Heep memory area.\n
\n
ChangeLog:\n
iwashi3d (1.0.12) stable; urgency=low\n
\n
\t* Improved a part of the BOIDS algorithm\n
\tBecause there was concern at transaction speed,\n
\tI made processing short in a BOIDS part.\n
\tHowever, there was not the need by the improvement\n
\tof the drawing part. thus I did a BOIDS part properly.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Fri, 29 Jul 2011 09:25:43 +0900\n
\n
iwashi3d (1.0.11) stable; urgency=low\n
\n
  * Changed default language\n
    - Japanese to English\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Thu, 21 Jul 2011 23:40:04 +0900\n
\n
iwashi3d (1.0.10) stable; urgency=low\n
\n
  * Fixed bug\n
      - changed slightly when changing the number of\n
        sardine movement.\n
  * Changed ADS.\n
      - To prevent them from pressing the wrong.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Thu, 21 Jul 2011 01:28:17 +0900\n
\n
iwashi3d (1.0.9) stable; urgency=low\n
\n
  * Fixed Bug.\n
      - Correct mistakes had been downgraded.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Sun, 17 Jul 2011 19:55:48 +0900\n
\n
iwashi3d (1.0.8) stable; urgency=low\n
\n
  * Fixed Bug.\n
    - When the number was 0 obtained in the config spec in config, fix bugs\n
      that do not retry\n
\n
 -- konno &lt;konno@qsdn.co.jp&gt;  Sun, 17 Jul 2011 19:44:52 +0900\n
\n
iwashi3d (1.0.7) stable; urgency=low\n
\n
  * Improved.\n
    - very slow and choppy.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Fri, 15 Jul 2011 19:06:25 +0900\n
\n
iwashi3d (1.0.6) stable; urgency=low\n
\n
  * Fixed Bug.\n
    - Changed Config Spec to initialize OpenGL.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Fri, 15 Jul 2011 14:06:55 +0900\n
\n
iwashi3d (1.0.5) stable; urgency=low\n
\n
  * Fixed Bug.\n
    - not start, but it puts on the status bar\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Thu, 14 Jul 2011 03:53:58 +0900\n
\n
Iwashi3d (1.0.4) stable; urgency=low\n
\n
  * Fixed Bug.\n
      - When the view mode of sardines, a bug in the direction of the gaze is abnormal\n
  * Changed Features.\n
      - When the view mode of sardines, not draw sardine with No.0.\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Wed, 13 Jul 2011 04:50:03 +0900\n
\n
Iwashi3d (1.0.3) stable; urgency=low\n
\n
  * Fixed Bug.\n
      - no check for RejectedExecuteException\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Mon, 04 Jul 2011 09:33:38 +0900\n
\n
Iwashi3d (1.0.2) stable; urgency=low\n
\n
  * Changed EGL Config Spec.\n
      - set EGL_NONE only (temporary setting)\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Sun, 03 Jul 2011 08:24:33 +0900\n
\n
Iwashi3d (1.0.1) stable; urgency=low\n
\n
  * Updated ChangeLog\n
  * No-OP debug log.\n
  * Added more information with crash\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Fri, 01 Jul 2011 20:24:35 +0900\n
\n
iwashi3d (1.0.0) stable; urgency=low\n
\n
  * First Release\n
\n
 -- Atsushi Konno &lt;konno@qsdn.co.jp&gt;  Sat, 02 Apr 2011 17:35:24 +0900\n
\n
Copyright:\n
  * Copyright (c) 2011 QSDN,Inc. All right reserved.\n
  * Copyright (c) 2011 Atsushi Konno All right reserved.\n
License:\n
  * Apache Software License 2.0.
    - see https://github.com/atkonn/iwashi3d
</string>
  <string name="key_preference_camera_mode">camera_mode</string>
  <string name="title_preference_camera_mode">Sardine View Mode</string>
  <string name="summary_on_preference_camera_mode">Sardine View Mode is running.</string>
  <string name="summary_off_preference_camera_mode">Normal View Mode is running.</string>

  <string name="title_preference_change_camera">Change Viewpoint</string>
  <string name="summary_preference_change_camera">This changes it of the distance from a viewpoint to a school of sardine.</string>
  <string name="dialog_title_change_camera">Change Viewpoint</string>
  <string name="dialog_message_change_camera">Please appoint the distance to a school of sardine</string>
  <string name="dialog_camera_distance_label">Distance:</string>

  <string name="to_default_button">reset</string>

  <string name="ads_title">Ads.</string>
</resources>
